<resources>
    <string name="app_name">LudoLearn</string>
    <string name="sign_in">Se connecter</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="student_sign_up">Élève - Inscription</string>
    <string name="teacher_sign_up">Professeur - Inscription</string>
    <string name="sign_in_as">En tant que :</string>
    <string name="create_account">Créer un compte :</string>
    <string name="i_am_student">Je suis un élève</string>
    <string name="i_am_teacher">Je suis un professeur</string>
    <string name="student">Élève</string>
    <string name="teacher">Professeur</string>
    <string name="first_name">Prénom :</string>
    <string name="last_name">Nom :</string>
    <string name="class_code">Code classe :</string>
    <string name="email">E-mail :</string>
    <string name="password">Mot de passe :</string>
    <string name="validate">Valider</string>
    <string name="game_choice">Choix du jeu</string>
    <string name="welcome">Bienvenue</string>
    <string name="next_question">Question suivante</string>
    <string name="next_intruder">Intrus suivant</string>
    <string name="restart">Rejouer</string>
    <string name="return_home">Retour à l\'accueil</string>
    <string name="category_choice">Choisis une catégorie</string>
    <string name="maths_choice">Choisis un type d\'exercice</string>
    <string name="mult_table_choice">Choisis une table de multiplication</string>
    <string name="french">Français</string>
    <string name="maths">Mathématiques</string>
    <string name="english">Anglais</string>
    <string name="sport">Sport</string>
    <string name="science">Sciences</string>
    <string name="history_geography">Histoire Géographie</string>
    <string name="history">Histoire</string>
    <string name="geography">Géographie</string>
    <string name="plastic_arts">Arts Plastiques</string>
    <string name="music">Musique</string>
    <string name="results">Résultats</string>
    <string name="clear_results">Supprimer les résultats</string>
    <string name="results_by_student">Résultats par élève</string>
    <string name="quiz_game">Jeu du Quiz</string>
    <string name="maths_game">Jeu des Maths</string>
    <string name="intrus_game">Jeu de l\'Intrus</string>
    <string name="pendu_game">Jeu du Pendu</string>
    <string name="profil">Mon profil</string>
    <string name="change_informations">Modifier mes informations</string>
    <string name="change_password">Changer de mot de passe</string>
    <string name="new_password">Nouveau mot de passe :</string>
    <string name="confirm_password">Confirmer le mot de passe :</string>
    <string name="save">Enregistrer</string>
    <string name="total">Total :</string>
</resources>