<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PenduActivity">

    <TextView
        android:id="@+id/textCategorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/category_choice"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/categorie1-4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCategorie">

        <Button
            android:id="@+id/categorieHistoire"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="choixCategorie"
            android:text="@string/history"
            android:textStyle="bold" />

        <Button
            android:id="@+id/categorieGeographie"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="choixCategorie"
            android:text="@string/geography"
            android:textStyle="bold" />

        <Button
            android:id="@+id/categorieFrancais"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:onClick="choixCategorie"
            android:text="@string/french"
            android:textStyle="bold" />

        <Button
            android:id="@+id/categorieMaths"
            android:layout_width="200dip"
            android:layout_height="match_parent"
            android:onClick="choixCategorie"
            android:text="@string/maths"
            android:textStyle="bold" />

        <Button
            android:id="@+id/categorieSport"
            android:layout_width="200dip"
            android:layout_height="match_parent"
            android:onClick="choixCategorie"
            android:text="@string/sport"
            android:textStyle="bold" />

        <Button
            android:id="@+id/categorieArtPlastique"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:onClick="choixCategorie"
            android:text="@string/plastic_arts"
            android:textStyle="bold" />

        <Button
            android:id="@+id/categorieAnglais"
            android:layout_width="200dip"
            android:layout_height="match_parent"
            android:onClick="choixCategorie"
            android:text="@string/english"
            android:textStyle="bold" />

        <Button
            android:id="@+id/categorieMusique"
            android:layout_width="200dip"
            android:layout_height="match_parent"
            android:onClick="choixCategorie"
            android:text="@string/music"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>