<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".QuizResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewQuizResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/results"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewErreursFrancais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/french"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewErreursMaths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maths"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewErreursAnglais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewErreursSciences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/science"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewErreursHistoire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewErreursGeographie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/geography"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonRestartQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:onClick="restartQuiz"
            android:text="@string/restart" />

        <Button
            android:id="@+id/buttonExitQuizz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="exitQuiz"
            android:text="@string/return_home" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>